correction: paragraph spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,8 +69,8 @@ h2 {
 
 
 /* start main paragraph */
-.mainparagraph {
-    margin-top: 10%;
+.main-paragraph {
+    margin-top: 50px;
 }
 
 .highlight-text {
